2020-01-09  Peter Bloomfield  <pbloomfield@bellsouth.net>

	balsa-index: minor cleanup

	* src/balsa-index.c (bndx_scroll_on_open_idle): rename 'total'
	to 'n_children', as in:
	(balsa_index_ensure_visible): use
	gtk_tree_path_new_from_indices() instead of
	gtk_tree_model_iter_nth_child() and gtk_tree_model_get_path().

2020-01-08  Peter Bloomfield  <pbloomfield@bellsouth.net>

	libbalsa/x509-cert-widget: keep scan-build happy

	* libbalsa/x509-cert-widget.c (x509_cert_chain_smime): keep
	  scan-build happy by checking for NULL chain.

2020-01-08  Peter Bloomfield  <pbloomfield@bellsouth.net>

	balsa-index: do not scroll to first-unread message when
	LibBalsaMailbox::changed signal is received.

	It is not needed, and it blocks scroll-on-open from scrolling to
	the first-unread message.

	* src/balsa-index.c (bndx_mailbox_changed_idle): do not clear
	LibBalsaMailbox:first_unread; and do not scroll to it, either.

2020-01-07  Peter Bloomfield  <pbloomfield@bellsouth.net>

	main-window: Avoid recursive entry

	to an idle callback. It happens because of a call to
	libbalsa_progress_set_fraction(), which then results in a call
	to gtk_main_iteration_do(); the current event is apparently
	still in the queue, so it gets re-entered.

	The progress indicator needs to be rethought!

	* src/main-window.c (bw_real_open_mbnode_idle_cb),
	(balsa_window_real_open_mbnode):

2020-01-06  Peter Bloomfield  <pbloomfield@bellsouth.net>

	libbalsa-mailbox: Pack booleans in contiguous 1-bit fields

	It saves run-time storage, and also reduces binary code size (at
	least on x-86-64, with gcc -O2).
	Small differences in both cases!

	* libbalsa/mailbox.c (libbalsa_mailbox_set_msg_tree_changed),
	(libbalsa_mailbox_set_is_directory),
	(libbalsa_mailbox_set_readonly),
	(libbalsa_mailbox_set_no_reassemble),
	(libbalsa_mailbox_set_has_unread_messages),
	(libbalsa_mailbox_set_messages_loaded),
	(libbalsa_mailbox_set_messages_threaded): Make sure that
	gboolean arguments really are boolean.
